--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,31 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/definition_title"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textWordView"
+        android:id="@+id/definitionDisplay"
         style="@style/definition_title"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="@android:color/holo_orange_light"/>
-
-
-    <TextView
-        android:id="@+id/textCategoryView"
-        style="@style/definition_title"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="@android:color/holo_orange_light"/>
-
-    <TextView
-        android:id="@+id/textDefinitionView"
-        style="@style/definition_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_orange_light"/>
+        android:background="@android:color/holo_orange_light" />
 
-
-</LinearLayout>
+</RelativeLayout>
